onclick mass-actions visible

--- a/app/views/shared/_core_index.html.erb
+++ b/app/views/shared/_core_index.html.erb
@@ -6,27 +6,27 @@ $(function(){
 </script>
 
             <div class="row row-top">
-              <div class="col-md-10">
+              <div class="col-md-10 header">
                 <h3><%= model.pluralize %>
               &nbsp;&nbsp;
-              <span class="pill-like blue">
+              <span class="pill-less">
                 <span class="glyphicon glyphicon-share mar0"></span>&nbsp;<span>Assign To</span>
               </span>
               &nbsp;&nbsp;
-              <span class="pill-like green">
+              <span class="pill-less">
               <span class="glyphicon glyphicon-envelope mar0"></span>&nbsp;<span>Email</span>
               </span>
               &nbsp;&nbsp;              
-              <span class="pill-like red1">
+              <span class="pill-less">
               <span class="glyphicon glyphicon-remove mar0"></span>&nbsp;<span>Delete</span>
               </span>
               &nbsp;&nbsp;
 
-              <span class="pill-like purple">
+              <span class="pill-less">
                 <span class="glyphicon glyphicon-play mar0"></span>&nbsp;<span>Progression</span>
               </span>
               &nbsp;&nbsp;
-              <span class="pill-like purple">
+              <span class="pill-less">
               <span class="glyphicon glyphicon-home mar0"></span>&nbsp;<span>Branch</span>
               </span>
               &nbsp;&nbsp;
