--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,7 +140,15 @@ strong.sm{font-size:12px;}
     padding: 5px 5px 5px 5px;
     font-size: 10px;
     font-weight: bold;}
-   .main .main-content .pill-like {
+    
+   .main .main-content .pill-less {
+    color: #555753;
+    padding: 5px 5px 5px 5px;
+    font-size: 10px;
+    border-radius:10px;
+    background-color: #eeeeec;          }
+    
+    .main .main-content .pilled {
     color: #fff;
     padding: 5px 5px 5px 5px;
     font-size: 10px;
@@ -148,7 +156,9 @@ strong.sm{font-size:12px;}
     border-radius:10px;
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-    cursor: pointer;          }
+    cursor: pointer;          
+    background-color: #729fcf;}
+    
     .main .main-content .blue {
     background-color: #729fcf; }
      .main .main-content .green {
