--- a/app/views/shared/_core_index.html.erb
+++ b/app/views/shared/_core_index.html.erb
@@ -6,33 +6,8 @@ $(function(){
 </script>
 
             <div class="row row-top">
-              <div class="col-md-10 header">
-                <h3><%= model.pluralize %>
-              &nbsp;&nbsp;
-              <span class="pill-less">
-                <span class="glyphicon glyphicon-share mar0"></span>&nbsp;<span>Assign To</span>
-              </span>
-              &nbsp;&nbsp;
-              <span class="pill-less">
-              <span class="glyphicon glyphicon-envelope mar0"></span>&nbsp;<span>Email</span>
-              </span>
-              &nbsp;&nbsp;              
-              <span class="pill-less">
-              <span class="glyphicon glyphicon-remove mar0"></span>&nbsp;<span>Delete</span>
-              </span>
-              &nbsp;&nbsp;
-
-              <span class="pill-less">
-                <span class="glyphicon glyphicon-play mar0"></span>&nbsp;<span>Progression</span>
-              </span>
-              &nbsp;&nbsp;
-              <span class="pill-less">
-              <span class="glyphicon glyphicon-home mar0"></span>&nbsp;<span>Branch</span>
-              </span>
-              &nbsp;&nbsp;
-                
-                </h3>
-                
+              <div class="col-md-10">
+                <h3><%= model.pluralize %></h3>
               </div>
               <div class="col-md-2">
                 <div class="form-group form-last pull-right">
