--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,215 +1,3 @@
-<script type="text/javascript">
-$(function(){
-
-  activeMM("usersMM");
-  setColorsFromSession();
-  $('.best_in_place').best_in_place();
-  $('li.view_user').css('display','');
-  $('li.view_user').addClass('active-tab');
-  $('li.view_user').text('<%= @user.name %>');
-  
-});
-
-</script>
-
-
-<div class="tab-container">
-<%= render 'users/menu' %>
-<div class="tab-content" style="display:block">
-<div class="boxp box-theme-ch">
-<% a = @user %>
-<% adm = current_user.adm? %>
-<div class="tab-content3" id="tab-content62">
-        <div class="">
-               <div class="htab">
-                <h5>
-                    <b>Role : 
-                        <span class="sp">
-                            <h6>
-                            <% if adm %>
-                            <b><%= best_in_place a,
-                               :role_id,
-                               :type => :select, 
-                              :collection => Role.order(:name).map{|i| [i.id,i.name.titleize]} %> </b>
-                            <% else %>
-                             <b><%= a.role.name.titleize rescue "Unassigned" %></b>
-                            <% end %>
-                            </h6>
-                        </span>
-                    </b>
-                </h5>
-                <% if adm %>
-                <span class="toggler" onclick="$('#users_permissions').slideToggle();">(manage permissions)</span>
-                <% end %>
-                
-                <div id="users_permissions" style="display:none;">
-                  <%= render 'roles/permissions', role: a, f: "user" %>
-                </div>
-                
-                <div class="cl"></div>
-                
-               </div>
-               <br/>
-        <div class="cols brgb" style="padding-bottom:20px">
-            <div class="col8">
-                <div id="scrollboxu">
-                <div class="rel abs-plus-box">
-                  <%= image_tag((a.image? ? a.image_url : "/images/icons/user.png"),
-                               {width: "100",class: "tooltip",title: "Upload your photo",
-                                class: "imgb fl"
-                                }) %>
-                  <% if (can? :update,a) %>
-                  <span onclick = "showPopUp('upload_image');" class="abs-plus">+</span>
-                  <% end %>
-                </div>
-                 <div id="upload_image" class="addNewPop" style="display: none; top: 483px; left: 455px;"> 
-                   <%= render 'shared/img_upload', a: a %>
-                 </div>
-
-                            <div class="fl padl20">
-                                    <h5>
-                                    <b>                        
-                                        <%= best_in_place_if (can? :update,a), a, :first_name %>
-                                        <%= best_in_place_if (can? :update,a), a, :surname %>
-                                    </b>
-                                    <span>
-                                      [<%= a.active_for_authentication? ? "Active" : "Inactive" %>]
-                                    </span>
-                                    </h5>
-                                    <ul class="vlsdet1">
-                                    <li><label>Mobile </label>: <%= best_in_place_if (can? :update,a),
-                                                                    a, :mobile %></li>
-                                    <li><label>Email</label>: <%= best_in_place_if (can? :update,a),
-                                                                  a, :email %></li>
-                                    </ul>
-                            </div>
-                            <div class="cl"></div>
-                            <br/>
-                            <h4 class="htab">
-                            Personal information
-                            </h4>
-                            <ul class="vlsdet">
-                            <li><label>Date of Birth</label>: 
-                            <%= best_in_place_if (can? :update,a),a,:date_of_birth,:type => :date %>
-                            </li>
-                            <li><label>Gender</label>: 
-                            <%= best_in_place_if (can? :update,a), a,
-                                              :gender,
-                                              type: :select,
-                                              collection: [['m','male'],['f','female']] %></li>
-                            <li><label>Address</label>: 
-                            <%= best_in_place_if (can? :update,a), a,
-                                              :address, 
-                                              :type => :textarea %>
-                            </li>
-                            <br/>
-                            <table>
-                <% %w(skype facebook linkedin twitter gplus blogger website).each do |s|%>
-                            <tr>
-                            <td><%= image_tag("/images/icons/" + s + ".png",{width: 24}) %></td>
-                            <td><li><label><%= s.titleize %></label> </li></td>
-                            <td> <%= best_in_place_if (can? :update,a), a, s.to_sym %></td>
-                            </tr>
-                <% end %>
-            </table>
-                            </ul>
-                            <br/>
-                            <div class="brg0"> </div>
-                            </ul>
-                            <br/>
-                            
-                            
-                </div>
-            </div>
-                <% if adm %>
-                <div class="col4 ">
-                    <div class="boxs">
-                        <ul class="infodhls">
-                            <li>User history</li>
-                            <li>
-                            <b>Invited at :</b> 
-                              <%= a.created_at.to_date %>
-                            </li>
-                            <li>
-                            <b>Invited by :</b> 
-                              <%= User.find(a.invited_by_id).name rescue "Unknown" %>
-                            </li>
-                            <br/>
-                            <li>
-                            <b>Sign in count :</b> 
-                                <%= a.sign_in_count %> times
-                            </li>
-                            <li>
-                            <li>
-                            <b>Last sign in at :</b> 
-                                <%= a.last_sign_in_at %>
-                            </li>
-                            <li>
-                            <b>Last sign in IP :</b> 
-                              <%= a.last_sign_in_ip %>
-                            </li>
-                            <li>
-                            <br/>
-                        </ul>
-                    </div>
-                    <br/>
-                    <br/>
-                    
-                    <%= form_for(a) do |d| %>
-                      <% if a.is_active %>
-                        <% b = "Deactivate" %>
-                        <% val = false %>
-                      <% else %>
-                        <% b = "Activate" %>
-                        <% val = true %>
-                      <% end %>
-                      <%= d.hidden_field :is_active, value: val %>
-                      <%= d.submit b,{class: "btnp fr"} %>
-                    <% end %>
-                    
-                </div>
-                <% end %>
-          </div>
-         <% if adm %> 
-         <div id="activities-display">
-            <br/><div class="htab">
-            <h5><b>Activities</b></h5>
-            </div><br/>
-            <div id="scrollboxu"  style="height:440px">    
-            <table class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
-                 <thead>
-                  <tr>
-                                        <th>Action</th>
-                                        <th>Model</th>
-                                        <th>Ip address</th>
-                                        <th>About</th>
-                                        <th>Timestamp</th>
-                  </tr>
-                </thead>
-                <tbody>
-              <% Audit.where(user_id: a.id).order("created_at desc").each do |i| %>
-                <tr>
-                 <td><%= i.action.capitalize %></td>
-                 <td><%= link_to i.auditable_type,"/#{i.auditable_type.downcase.pluralize}/#{i.auditable_id}" %></td>
-                 <td><%= i.remote_address %></td> 
-                 <td><%= time_ago_in_words(i.created_at) %> ago</td>
-                 <td><%= i.created_at.strftime("%A, %F %R %p") %></td>
-                </tr>
-              <% end %>
-                <tr>
-                  <td colspan="5" align="left"></td>
-                </tr>
-                </tbody>
-             </table>
-            </div>
-        </div>
-        <% end %>
-
-</div>
-
-
-
-</div>
-</div>
-</div>
+<%= render 'menu' %>
+<%= render 'basic' %>
 
