--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -21,7 +21,8 @@
                 <th>Description</th>
                 <th>Created</th>
                 <th>Last Modified</th>
-                <th colspan=2>&nbsp;</th>
+                <th>&nbsp;</th>
+                <th>&nbsp;</th>
               </tr>
             </thead>
             <tbody>
@@ -35,7 +36,8 @@
                     <%= link_to '<span class="glyphicon glyphicon-edit"></span>'.html_safe, 
                                 edit_role_path(r),
                                 {remote: true,
-                                onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %>
+                                onclick: '$("div.row-top > h3").append("<img class=temp src=/images/icons/sload.gif >");'} %></td>
+                   <td>
                     <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, 
                                 r, 
                                 method: :delete, 
